# Web-Server

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/chatmodes/: Document Doctor.chatmode.md  test.chatmode.md
VotingSystem/: CHANGE_ANALYSIS_REPORT.md  CMakeLists.txt  Candidate.cpp  Candidate.h  ClearBallotService.cpp  ClearBallotService.h  DATA_PERSISTENCE_GUIDE.md  DEMO_INSTRUCTIONS.md  Election.cpp  Election.h  INPUT_VALIDATION_GUIDE.md  MERGE_READINESS_ASSESSMENT.md  REPOSITORY_ISSUES_ANALYSIS.md  ServiceClient.cpp  TECHNICAL_CONCEPTS_OVERVIEW.md  Voter.cpp  Voter.h  admin_main.cpp  main.cpp  service_test.cpp  voter_main.cpp  voter_session_complete.txt
VotingSystem/applications/: main.cpp
VotingSystem/applications/admin/: admin_main.cpp
VotingSystem/applications/demos/: regional_demo.cpp  test_restrictions.cpp
VotingSystem/applications/service/: service_main.cpp
VotingSystem/applications/voter/: voter_main.cpp
VotingSystem/docs/: ARCHITECTURE_GUIDE.md  COMPREHENSIVE_TEST_RESULTS.md  DEMO_INSTRUCTIONS.md  DOCUMENTATION_COMPLETE.md  PHASE1_COMPLETE_SUCCESS.md  PHASE1_VOTER_MIGRATION_COMPLETE.md  PROJECT_STRUCTURE_GUIDE.md  QUICK_START.md  REGIONAL_VOTING_GUIDE.md  REORGANIZATION_SUMMARY.md  SERVICE_ARCHITECTURE_GUIDE.md  SERVICE_ARCHITECTURE_PHASE1_COMPLETE.md  SERVICE_DEPLOYMENT_PLAN.md  VALIDATION_IMPLEMENTATION_COMPLETE.md  WEEK1_PROGRESS.md  WEEK1_TESTING_PROGRESS.md
VotingSystem/src/core/: Candidate.cpp  Candidate.h  Election.cpp  Election.h  Voter.cpp  Voter.h  party.cpp  party.h
VotingSystem/src/regional/: Region.cpp  Region.h
VotingSystem/src/services/: ClearBallotService.h  ServiceClient.cpp  ServiceClient.h
VotingSystem/src/validation/: InputValidator.cpp  InputValidator.h
VotingSystem/tests/: CMakeLists.txt  service_test.cpp
VotingSystem/tests/integration/: test_full_system_integration.cpp
VotingSystem/tests/unit/core/: test_election_core.cpp
VotingSystem/tests/unit/regional/: test_regional_voting.cpp
VotingSystem/tests/unit/services/: test_service_architecture.cpp
VotingSystem/tests/unit/validation/: test_input_validation.cpp
web-server/: BasicSocket.cpp  BasicSocket.hpp  BindinSocket.hpp  BindingSocket.cpp  web-server.cpp  web-server.sln  web-server.vcxproj  web-server.vcxproj.filters
web-server/web-server/x64/Debug/: vc143.idb  web-server.exe.recipe  web-server.ilk
web-server/web-server/x64/Debug/web-server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  web-server.lastbuildstate
